--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     --primary-text-color: #757575;
     --primary-white-color: #FFFFFF;
     --icon-primary: #AFB1B8;
-    --timing-anim: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --timing-anim: 2050ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
     font-size: 14px;
@@ -63,7 +63,7 @@ cursor: pointer;
     color: #000000;
 }
 .logo-down- {
-    color: #FFFFFF;
+    color: var(--primary-white-color);
 }
 .header-nav {
 display: flex;
@@ -93,7 +93,7 @@ align-items: center;
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background: #2196F3;
+    background: var(--accent-color);
     position: absolute;
     left: 0;
     bottom: 0;
@@ -239,7 +239,7 @@ align-items: center;
 .about-item + .about-item, .team-item + .team-item {
     margin-left: 30px;
 }
-.about-item {
+.about-card {
     position: relative;
 }
 .about-img {
@@ -445,7 +445,7 @@ align-items: center;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: var(--primary-white-color);
     margin-bottom: 20px;
 }
 .footer-cont {
@@ -453,10 +453,11 @@ align-items: center;
     align-items: baseline;
 }
 .footer-letter-modal {
-    display: flex;
+    /* display: flex; */
+    
 }
 .footer-form {
-    margin-right: 12px;
+    display: flex;
 }
 .footer-modal-input {
     width: 358px;
@@ -468,19 +469,20 @@ align-items: center;
     outline: none;
     font-weight: 400;
     padding-left: 16px;
+    margin-right: 12px;
+    color: var(--primary-white-color);
 }
 .footer-form input::placeholder {
     color: rgba(255, 255, 255, 0.6);
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
 }
 .footer-btn {
     border: none;
     width: 200px;
     height: 50px;
-    background: #2196F3;
+    background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     font-weight: 700;
@@ -489,7 +491,7 @@ align-items: center;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    color: #FFFFFF;
+    color: var(--primary-white-color);
     display: flex;
     padding: 10px 28px 10px 29px;
 }
@@ -559,7 +561,7 @@ align-items: center;
 .card-background {
     width: 370px;
     height: 100%;
-    background: rgba(33, 150, 243, 0.9);
+    background-color: rgba(33, 150, 243, 0.9);
     position: absolute;
     top: 0;
     transform: translateY(100%);
@@ -570,7 +572,7 @@ align-items: center;
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
-    color: #FFFFFF;
+    color: var(--primary-white-color);
     padding: 63px 24px;
 }
 .portfolio-link:hover .card-background,
@@ -610,7 +612,7 @@ align-items: center;
     height: 100%;
     top: 0;
     background-color: rgba(0, 0, 0, 0.1);
-    transition: var(--timing-anim);
+    transition: background-color var(--timing-anim);
 }
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0.5) skew(90deg, 45deg);
@@ -641,21 +643,24 @@ align-items: center;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
-    color: #757575;
+    color: var(--primary-text-color);
     margin-bottom: 4px;
     display: block;
 }
 .modal-lable-name, .modal-lable-phone, .modal-lable-letter {
     position: relative;
+}
+.modal-person, .modal-phone, .modal-letter {
     margin-bottom: 10px;
 }
 .modal-input {
-    width: 448px;
+    width: 100%;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding-left: 42px;
     outline: none;
+    transition: border-color var(--timing-anim);
 }
 .modal-input:focus,
 .modal-text:focus {
@@ -671,9 +676,10 @@ align-items: center;
     left: 12px;
     top: 50%;
     transform: translateY(-50%);
+    transition: var(--timing-anim);
 }
 .modal-text {
-    width: 448px;
+    width: 100%;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -681,6 +687,9 @@ align-items: center;
     padding: 12px 16px;
     font-weight: 400;
     outline: none;
+    transition: border-color var(--timing-anim);
+}
+.lable-text {
     margin-bottom: 20px;
 }
 .lable-text textarea::placeholder {
@@ -698,6 +707,7 @@ align-items: center;
     background-size: contain;
     background-origin: border-box;
     border-color: var(--accent-color);
+    transition: background-color var(--timing-anim), border-color var(--timing-anim);
 }
 .user-check {
     position: absolute;
@@ -720,7 +730,7 @@ align-items: center;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--primary-text-color);
 }
 .span-icon {
     content: "";  
@@ -730,23 +740,23 @@ align-items: center;
     border: 2px solid;
     border-color: var(--secondery-text-color);
     border-radius: 4px;
-    transition: var(--timing-anim);
+    transition: border-color var(--timing-anim);
 }
 .modal-btn {
     width: 200px;
     height: 50px;
-    background: var(--accent-color);
+    background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     font-weight: 700;
     font-size: 16px;
     line-height: 30px;
     letter-spacing: 0.06em;
-    color: #FFFFFF;
+    color: var(--primary-white-color);
     border: none;
     margin: 0 auto;
     display: block;
-    transition: var(--timing-anim);
+    transition: background-color var(--timing-anim), box-shadow var(--timing-anim);
 }
 .modal-btn:hover,
 .modal-btn:focus {
@@ -763,18 +773,21 @@ align-items: center;
     position: absolute;
     top: 8px;
     right: 8px;
-    transition: var(--timing-anim);
 }
 .button-close:hover, 
 .button-close:focus {
-    color: var(--accent-color);
     fill: var(--accent-color);
     outline: none;  
 }
 .icon-close {
     width: 30px;
     height: 30px;
-    stroke: rgba(0, 0, 0, 0.1)
+    stroke: rgba(0, 0, 0, 0.1);
+    transition: fill var(--timing-anim);
+}
+.licence-link {
+    color: var(--accent-color);
+    margin-left: 3px;
 }
 .is-hidden {
     opacity: 0;
