--- a/sass/layout/_portfolio-part.scss
+++ b/sass/layout/_portfolio-part.scss
@@ -1,12 +1,12 @@
-.choice {
+.portfolio-part__list {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
 }
-.choice__item:not(:last-child) {
+.portfolio-part__item:not(:last-child) {
     margin-right: 8px;
 }
-.choice__btn {
+.portfolio-part__btn {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -29,4 +29,7 @@
         color: var(--primary-white-color);
         background-color: var(--accent-color)
     }
+}
+.current {
+    color: var(--accent-color);
 }
