--- a/sass/components/_footer-join.scss
+++ b/sass/components/_footer-join.scss
@@ -1,4 +1,4 @@
-.letter__form {
+.footer-join__form {
     display: flex;
     & input::placeholder {
         color: rgba(255, 255, 255, 0.6);
@@ -7,7 +7,7 @@
         letter-spacing: 0.03em;
     }
 }
-.letter__modal-input {
+.footer-join__input {
     width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -19,7 +19,7 @@
     margin-right: 12px;
     color: var(--primary-white-color);
 }
-.letter__btn {
+.footer-join__btn {
     border: none;
     width: 200px;
     height: 50px;
@@ -36,7 +36,7 @@
     display: flex;
     padding: 10px 28px 10px 29px;
 }
-.letter__icon {
+.footer-join__icon {
     width: 24px;
     height: 24px;
     margin-left: 10px;  
