--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -32,6 +32,11 @@
         fill: var(--accent-color);
     }
 }
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
 .modal__icon {
     width: 30px;
     height: 30px;
