--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,17 +1,20 @@
 .about {
+    padding-top: 0;
+}
+.about__list {
     display: flex;
     align-items: center;
 }
 .about__item + .about__item, .team__item + .team__item {
     margin-left: 30px;
 }
-.about__card {
+.about__wraper {
     position: relative;
 }
 .about__img {
     display: block;
 }
-.title-text--about {
+.about__title {
     color: var(--primary-white-color);
     text-align: center;
     padding: 27px 0px;
@@ -20,7 +23,4 @@
     height: 70px;
     background: rgba(47, 48, 58, 0.8);
     position: absolute;
-}
-.section-top {
-    padding-top: 0;
 }
