--- a/sass/layout/_card-list.scss
+++ b/sass/layout/_card-list.scss
@@ -1,8 +1,8 @@
-.portfolio {
+.card-list {
     display: flex;
     flex-wrap: wrap;
 }
-.portfolio__item {
+.card-list__item {
     transition: box-shadow var(--timing-anim);
     &:hover, &:focus {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -18,11 +18,11 @@
         margin-bottom: 0px;
     }
 }
-.portfolio__wrap {
+.card-list__wrap {
     position: relative;
     overflow: hidden;
 }
-.portfolio__card {
+.card-list__card {
     width: 370px;
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
@@ -30,12 +30,12 @@
     top: 0;
     transform: translateY(100%);
     transition: var(--timing-anim);
-    .portfolio__link:hover &,
-    .portfolio__link:focus & {
+    .card-list__link:hover &,
+    .card-list__link:focus & {
         transform: translateY(0%);
     }
 }
-.portfolio__card-text {
+.card-list__card-text {
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
@@ -43,13 +43,13 @@
     color: var(--primary-white-color);
     padding: 63px 24px;
 }
-.portfolio__site {
+.card-list__site {
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
     border-left: 1px solid #EEEEEE;
     padding: 20px 24px 20px 24px;   
 }
-.portfolio__title {
+.card-list__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -57,13 +57,13 @@
     color: var(--secondery-text-color);
     margin-bottom: 4px;
 }
-.portfolio__text {
+.card-list__text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
 }
-.portfolio__img {
+.card-list__img {
     display: block;
 }
