--- a/sass/layout/_footer-soc.scss
+++ b/sass/layout/_footer-soc.scss
@@ -1,12 +1,12 @@
-.join {
+.footer-soc {
     margin-right: 93px;
 }
-.join__icon {
+.footer-soc__icon {
     width: 20px;
     height: 20px;
     fill: var(--primary-white-color);
 }
-.join__link {
+.footer-soc__link {
     width: 44px;
     height: 44px;
     background-color: rgba(255, 255, 255, 0.1);
@@ -19,13 +19,13 @@
         background-color: var(--accent-color);
     }
 }
-.join__list {
+.footer-soc__list {
     display: flex;
 }
-.join__item + .join__item {
+.footer-soc__item + .footer-soc__item {
     margin-left: 10px;
 }
-.title-text--join, .title-text--letter {
+.footer-soc__title, .footer-join__title {
     color: var(--primary-white-color);
     margin-bottom: 20px;
 }
