--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -17,6 +17,8 @@
 }
 .clients__link {
     display: block;
+    width: 172px; 
+    height: 94px;
 }
 .clients__item:not(:last-child) {
     margin-right: 30px;
